@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - remove a very brief-lived attempt to double-decode
 
 5.018     2014-05-20 21:07:04-04:00 America/New_York
         - attempt to return abstract-from-file as a string, rather than
